April 2012 changes.  Just before removing the stuff from the menu.

--- a/BoyVsGirl/war/demo.html
+++ b/BoyVsGirl/war/demo.html
@@ -71,6 +71,9 @@
 														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/shaden-2.jpg', title : 'Image Credit: Brooke Shaden', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/shaden-2.jpg', url : 'http://www.nonsensesociety.com/2011/06/brooke-shaden/'},
 														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/shaden-3.jpg', title : 'Image Credit: Brooke Shaden', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/shaden-3.jpg', url : 'http://www.nonsensesociety.com/2011/06/brooke-shaden/'},
 														{image : 'http://boyvsgirlphotography.zenfolio.com/img/s10/v17/p400061037.jpg', title : 'Image Credit: Trevis Thomas', thumb : 'http://boyvsgirlphotography.zenfolio.com/img/s10/v17/p400061037-11.jpg', url : 'http://boyvsgirlphotography.zenfolio.com/p616294023/h17d8726d#h17d8726d'},
+														{image : 'http://photos.boyvsgirlphotography.com/img/s11/v36/p477278634-6.jpg', title : ' ©2011 Chrissy Thomas', thumb : 'http://photos.boyvsgirlphotography.com/img/s11/v36/p477278634-11.jpg', url : 'http://www.google.com/'},
+														{image : 'http://photos.boyvsgirlphotography.com/img/s11/v37/p460447058-6.jpg', title : ' ©2011 Chrissy Thomas', thumb : 'http://photos.boyvsgirlphotography.com/img/s11/v37/p460447058-11.jpg', url : 'http://www.google.com/'},
+
 														
 												],
 												
