--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -45,7 +45,7 @@
     </noscript>
 
     <h1>Flip Cards</h1>
-
+	<div id="logout"></div>
 	<div id="flipcards"></div>
 <!--  
     <table align="center">
