Sunday Morning.  First prod deploy.

--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Flip Cards</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -43,23 +43,9 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-
-    <h1>Flip Cards</h1>
+	<div id="systemError"></div>
+    <h1>¡Enfoca!</h1>
 	<div id="logout"></div>
 	<div id="flipcards"></div>
-<!--  
-    <table align="center">
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-    </table>
--->
   </body>
 </html>
