Progress of StudyItem refeactor

--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -43,9 +43,11 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-	<div id="systemError"></div>
-    <h1>¡Enfoca!</h1>
-	<div id="logout"></div>
-	<div id="flipcards"></div>
+    <div id="main" class="center">
+		<div id="systemError"></div>
+	    <h1>¡Enfoca!</h1>
+		<div id="logout"></div>
+		<div id="flipcards"></div>
+	</div>
   </body>
 </html>
