Added timeout feature.  Lots of bug fixes.

--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -114,6 +114,24 @@
 			background-image: url('/img/no.png');
 		}
 		
+		.gwt-PopupPanel {
+		  border: 1px solid #e7e7e7;
+		  padding:3em;
+		  background: white;
+		}
+		.gwt-PopupPanelGlass {
+		  background-color: #000;
+		  opacity: 0.05;
+		  filter: alpha(opacity=5);
+		}
+		
+		.tt-popup{
+			
+		}		
+		.tt-autoCompletePanel{
+			background-color: aliceBlue;
+			margin-bottom: 2em;
+		}
 		
 		/* Navbar */
   .navbar + .docs-section {
