Added confirmation dialogs.

--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -46,7 +46,9 @@
 		  display: block;
 		  margin-bottom: .5rem;
 		  font-weight: 600; }
-		  
+		 .tt-btn-fix{
+		 	margin-left: 0.4em;
+		 }
 		 .tt-underline {
 		 	border-bottom: 1px solid #E1E1E1;}
 		 .tt-title{
