Footer.  Wait cursor.

--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -134,6 +134,14 @@
 			background-color: aliceBlue;
 			margin-bottom: 2em;
 		}
+		.tt-footer{
+			text-align: center;
+			margin: 4em 0;
+			font-size: 0.75em;
+			color: grey;
+			border-top: 1px solid #E1E1E1;
+			
+		}
 		
 		/* Navbar */
   .navbar + .docs-section {
