--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -77,6 +77,10 @@
 		 	font-weight: 400;
 		 	margin-right: 0.75em;
 		 }
+		 
+		 .gwt-CheckBox{
+			 display:inline-block;
+		 }
 		 .disabled,
 		 .gwt-CheckBox-disabled {
 		    color: #ccc;
@@ -129,7 +133,7 @@
 		}
 		
 		.tt-popup{
-			
+			min-width: 35em;
 		}		
 		.tt-autoCompletePanel{
 			background-color: aliceBlue;
