--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -92,6 +92,9 @@
 		 .gwt-Anchor{
 			cursor: pointer;
 		 }
+		 .cursorPoiner{
+		 	cursor: pointer;
+		 }
 		 .flipCardText {
 		    margin: 1em 0 2em 0;
 		    cursor: pointer;
