Nasty bug! Answering a question erased all meta data!!
Also, seperated word creation from browsing.

--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -159,7 +159,7 @@
     display: block;
     width: 100%;
     /*height: 6.5rem;*/
-    margin-bottom: 3em;
+    margin-bottom: 1em;
     background: #fff;
     z-index: 99;
     border-top: 0px solid #eee;
@@ -200,7 +200,27 @@
 	    margin-left: auto;
 	    margin-right: auto;
 	}
-		 
+	
+	.tt-blue-bottom{border-bottom: 1px solid #33C3F0;}	 
+	.gwt-TabBarItem-wrapper-selected {
+	  color: #FFF;
+	  background-color: #33C3F0;
+	  border-color: #33C3F0;
+	}
+	.gwt-TabBarItem{
+	  outline-width: 0;
+	}
+	th, td {
+	  border-bottom: 0px solid #E1E1E1;
+	}
+	table.gwt-TabBar {
+	  border-bottom: 1px solid #33C3F0;
+	  margin-bottom: 0;
+	}
+	.gwt-TabPanelBottom {
+	  padding-left: 3em;
+	  padding-right: 3em;
+	}
     </style>
   </head>
 
