--- a/FlipCards/war/FlipCards.html
+++ b/FlipCards/war/FlipCards.html
@@ -61,7 +61,6 @@
 		    color: #666;
 		 }	
 		 
-		 
 		 .tt-padded {
 		 	margin: 2em;
 		 }	  
@@ -148,7 +147,13 @@
 			font-size: 0.75em;
 			color: grey;
 			border-top: 1px solid #E1E1E1;
-			
+		}
+		.tt-cardEditor{
+			background-color: aliceblue;
+			padding: 0.5em;
+		}
+		.tt-center{
+			text-align: center;
 		}
 		
 		/* Navbar */
